style: add some reboot styles, fix spacing classes order

--- a/src/assets/styles/_reboot.scss
+++ b/src/assets/styles/_reboot.scss
@@ -12,7 +12,6 @@
 body {
   font-family: 'Roboto Mono', monospace;
   line-height: 1.25;
-  background-color: rgba($gray, 0.1);
   color: $black;
 }
 
@@ -24,6 +23,11 @@ a,
 a:active,
 a:visited {
   color: $blue;
+}
+
+label,
+span {
+  display: inline-block;
 }
 
 /* width */
@@ -47,4 +51,9 @@ a:visited {
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background-color: $gray;
+}
+
+:focus {
+  outline: outline($blue);
+  border-color: $blue;
 }
